corrected the distorted structure of layout page

--- a/react-deploy/src/App.css
+++ b/react-deploy/src/App.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 .App {
-  text-align: center;
+  text-align: -webkit-center;
+  padding: 50px;
 }
 
 .App-logo {
